ephemeral file tests